--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==2.2.12\
-djangorestframework==3.9.1\
-uwsgi==2.0.18\
-markdown==3.2.1\
-django-filter==2.2.0\
-django-rest-swagger==2.2.0}
+Django==2.2.12
+djangorestframework==3.9.1
+uwsgi==2.0.18
+markdown==3.2.1
+django-filter==2.2.0
+django-rest-swagger==2.2.0
