--- a/script/uwsgi.ini
+++ b/script/uwsgi.ini
@@ -7,12 +7,12 @@ chdir           = /root/JLGLTaskList
 # Django's wsgi file
 module          = lsy_tasklist.wsgi
 # the virtualenv (full path)
-home            = /root/
+home            = /root/JLGLTaskList/venv
 # process-related settings
 # master
 master          = true
 # maximum number of worker processes
-processes       = 10
+processes       = 4
 # the socket (use the full path to be safe
 socket          = /root/JLGLTaskList/site.sock
 # ... with appropriate permissions - may be needed
